# agentsview

./: .roborev.toml  AGENTS.md  CLAUDE.md  Makefile  PI_REFACTORING_REVIEW.md  README.md  go.mod  go.sum  package-lock.json  refactor_fork_test.py
.github/workflows/: ci.yml  desktop-artifacts.yml  desktop-release.yml  msys2-update-check.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: edit-block-content-disparity.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmd/agentsview/: main.go  main_test.go  prune.go  prune_test.go  sync.go  sync_test.go  update.go
cmd/testfixture/: main.go
desktop/: README.md  package.json
desktop/scripts/: prepare-sidecar.sh  test-prepare-sidecar.sh
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/tauri/: README.md  package.json
desktop/ui/: index.html
docs/: desktop-release-setup.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: message-content.spec.ts  message-loading.spec.ts  navigation.spec.ts  session-count-consistency.spec.ts  session-list.spec.ts  virtual-list.spec.ts  virtualizer.spec.ts
frontend/src/: App.svelte  app.css  main.ts
internal/config/: config.go  config_test.go  migration.go  persistence_test.go
internal/db/: db.go  (+18 more)
scripts/: changelog.sh  e2e-server.sh  install.sh  install_test.sh  release.sh
(+217 files in other folders)
