[package]
name = "agentsview-desktop"
version = "0.1.0"
description = "AgentsView desktop wrapper"
authors = ["agentsview contributors"]
edition = "2021"

[lib]
name = "agentsview_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
